fix text overlap
fixes text overlapping icon in secondary menus

--- a/src/secureroot/v5-css/scss/slinky.scss
+++ b/src/secureroot/v5-css/scss/slinky.scss
@@ -12,6 +12,12 @@
   list-style: none;
   margin: 0;
 }
+.slinky-menu li:hover {
+background: $darkgray;
+}
+.slinky-menu a:focus {
+background: $focus;
+}
 .slinky-menu ul {
   width: 100%;
 }
@@ -23,7 +29,17 @@
   align-items: center;
   display: flex;
   overflow: visible;
+  max-width: 85%; // Stops text overlapping icon
 }
+
+.slinky-menu li.first a, a.back {
+max-width: 100%;
+}
+
+.slinky-menu li:focus-within {
+background: $focus; // fills gap in focus background caused by max-width of 85%;
+}
+
 .slinky-menu a span {
   flex: 1;
   overflow: visible;
